<resources>
    <string name="app_name">rick-and-morty-characters-app</string>
    <string name="Name">Name</string>
    <string name="Status">Status</string>
    <string name="Species">Species</string>
    <string name="Gender">Gender</string>
    <string name="Location">Last known location</string>
    <string name="Image">Image</string>
    <string name="Home">Home</string>
    <string name="Character_list">Characters list</string>
    <string name="Favorite">Favorite</string>
    <string name="Favorite_character">Favorite Characters</string>
</resources>