<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
  >


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/details_fragment_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

              <FrameLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/Image"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars"
                    />
                  <ImageView
                      android:id="@+id/FavButton"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom|end"
                      android:layout_marginRight="10dp"
                      android:padding="4dp"
                      android:src="@drawable/favorite_icon"
                      />
              </FrameLayout>

                <ImageView
                    android:id="@+id/back_press"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/baseline_arrow_back_24"/>

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/back_press"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/Name"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
            </RelativeLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            >


            <LinearLayout
                android:id="@+id/Status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Status"
                    android:paddingEnd="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Status2"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Status"
                    android:textSize="18sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/Status"
                android:padding="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Species"
                    android:paddingEnd="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Species2"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Species"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Species"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/Gender"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Gender2"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender"
                    android:textSize="16sp"
                    tools:text="Movie Overview" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Gender"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Location"
                    android:paddingEnd="10dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Location2"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Location"
                    android:textSize="16sp" />
            </LinearLayout>



        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/details_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
